Go get specific version of tools required to build canis in the Makefile.
