# pkg/apiserver/api/spec/canis-apiserver.swagger.json
@@ -123,7 +123,7 @@
         ]
       }
     },
-    "/agents/{agent_id}/invitation": {
+    "/agents/{agent_id}/invitation/{external_id}": {
       "post": {
         "operationId": "Admin_GetAgentInvitation",
         "responses": {
@@ -143,6 +143,12 @@
         "parameters": [
           {
             "name": "agent_id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "external_id",
             "in": "path",
             "required": true,
             "type": "string"
